# near-tournament

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh  dev-deploy.sh  dev-init.sh  test.sh  tournament.sh  tournament_add_nft_access.sh  tournament_add_prize.sh  tournament_add_whitelist_prize_owner.sh  tournament_create.sh  tournament_end.sh  tournament_execute_reward.sh  tournament_free_places.sh  tournament_is_whitelist_prize_owner.sh  tournament_join.sh  tournament_nft_access.sh  tournament_players.sh  tournament_prizes.sh  tournament_start.sh  tournament_whitelist_prize_owners.sh  tournaments.sh
scripts/neardev/: dev-account  dev-account.env  dev-contracts.env
src/: ft_callbacks.rs  lib.rs  nft_callbacks.rs
