[package]
name = "tournament"
version = "0.1.0"
authors = ["D G", "Muzikanto <schiriy_maxim@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1.0"
near-sdk = { version = "4.1.0-pre.3", features = ["abi"] }
mfight_sdk = { path = "../-sdk", version = "=0.1.0" }
schemars = "0.8"

[dev-dependencies]
workspaces = "0.4.1"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.1.0-pre.0"
zstd = "0.11"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
